--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "17.0.37",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "sass": "^1.62.1",
     "typescript": "4.5.2"
   }
 }
