--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-gist": "^1.2.4"
   },
   "devDependencies": {
-    "@types/node": "16.11.10",
-    "@types/react": "17.0.37",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^18.2.4",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "sass": "^1.62.1",
-    "typescript": "4.5.2"
+    "typescript": "^4.5.2"
   },
   "husky": {
     "hooks": {
