--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "^10.4.0",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
-    "next": "12.0.4",
+    "next": "^12.1.2",
     "next-mdx-remote": "^3.0.7",
     "postcss": "^8.4.1",
     "react": "17.0.2",
