Fix issues chaching images

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cache-posts": "node cache/cache.ts"
+    "cache-posts": "node cache/cache.js"
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
