--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky": "^8.0.3",
     "next": "^12.1.2",
     "next-mdx-remote": "^3.0.7",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
