--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
     "next": "^12.1.2",
