--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.1.2",
     "next-mdx-remote": "^3.0.7",
     "normalize.css": "^8.0.1",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^18.2.4",
