--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "husky": "^8.0.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "next": "^12.1.2",
+    "next": "^13.4.4",
     "next-mdx-remote": "^3.0.7",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gist": "^1.2.4"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^18.2.4",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
+    "eslint-config-next": "^13.4.4",
     "sass": "^1.62.1",
     "typescript": "^4.5.2"
   },
@@ -40,5 +40,5 @@
       "pre-commit": "npm cache-posts"
     }
   },
-  "version": "1.4.0"
+  "version": "2.0.0"
 }
