--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "next": "^13.4.4",
-    "next-mdx-remote": "^3.0.7",
+    "next-mdx-remote": "^4.4.1",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-gist": "^1.2.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
@@ -40,5 +39,5 @@
       "pre-commit": "npm cache-posts"
     }
   },
-  "version": "2.0.0"
+  "version": "2.1.0"
 }
